# crewai-a2a

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: agents.yaml  tasks.yaml
src/crewai_a2a/: __init__.py  _a2a_compat.py  a2a_tool.py  agents.py  config.py  crew.py  server.py  tasks.py
tests/: conftest.py  test_a2a_tool.py  test_agents.py  test_config.py  test_crew.py  test_server.py
